# cmake-demo-game

./: .gitignore  CMakeLists.txt  README.md
3rd/easyprofiler/: CMakeLists.txt
3rd/glad/: CMakeLists.txt
3rd/glad/include/glad/: glad.h
3rd/glad/src/: glad.c
3rd/rttr/src/rttr/: variant.h
3rd/tiny_obj_loader/include/: tiny_obj_loader.h
3rd/yaml/: CMakeLists.txt
examples/: CMakeLists.txt
examples/test_rttr/: CMakeLists.txt
examples/test_rttr/src/: main.cpp  person.cpp  person.h  test.cpp
game/: login_scene.cpp  login_scene.h  main.cpp
resources/: cube.mesh
resources/image/: cube.cpt
resources/material/: cube.mat  unknow.mat
resources/shader/: Unlit.fs  Unlit.vs
src/: ShaderSource.h  Texture2D.cpp  Texture2D.h  VertexData.h  main.cpp  vertex_data.h
src/component/: component.cpp  component.h  game_object.cpp  game_object.h  transform.cpp  transform.h
src/control/: input.cpp  input.h  key_code.h
src/renderer/: camera.cpp  camera.h  material.cpp  material.h  mesh_filter.cpp  mesh_filter.h  mesh_renderer.cpp  mesh_renderer.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h
src/utils/: application.cpp  application.h  screen.h
tools/compress/: CMakeLists.txt  main.cpp
